--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:Armor]
+[env:Runway]
 platform = atmelavr
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
