pushing up what's on my laptop

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = atmelavr
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-upload_port = /dev/cu.usbserial-AQ01LMO6
-board = nanoatmega328new
+upload_port = /dev/cu.usbserial-A1081AB5
+board = pro16MHzatmega328
